--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -26,3 +26,14 @@ body {
   overflow-y: auto;
   background-color: var(--main-bg);
 }
+
+body, html, #root {
+  height: 100%;
+  margin: 0;
+}
+
+.app-container {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
